# equalizer-pwf

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  equalizer-pwf.desktop  org.bloompa.EqualizerPWF.yml  package.sh
.github/workflows/: flatpak-build.yml
inc/: app.h  audio.h  audio_sink_info.h  channel.h  config.h  eq.h  graph.h  msg.h  pw_info_mgr.h  pw_types.h
src/: app.cpp  audio.cpp  audio_sink_info.cpp  eq.cpp  graph.cpp  main.cpp  pw_info_mgr.cpp
